--- a/BE/.gitignore
+++ b/BE/.gitignore
@@ -29,5 +29,7 @@ build/
 !**/src/main/**/build/
 !**/src/test/**/build/
 
+BE/src/main/resources/application.properties
+
 ### VS Code ###
 .vscode/
