push order creation, cancellation, and Stripe payment

--- a/BE/src/main/resources/application.properties
+++ b/BE/src/main/resources/application.properties
@@ -8,6 +8,7 @@ spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql=true
+logging.level.org.springframework.security=DEBUG
 
 # Server configuration
 spring.main.allow-bean-definition-overriding=true
@@ -36,3 +37,6 @@ spring.security.oauth2.client.registration.google.client-name=Google
 spring.security.oauth2.client.provider.google.authorization-uri=https://accounts.google.com/o/oauth2/auth
 spring.security.oauth2.client.provider.google.token-uri=https://oauth2.googleapis.com/token
 spring.security.oauth2.client.provider.google.user-info-uri=https://www.googleapis.com/oauth2/v3/userinfo
+
+#Payment Gateway
+stripe.secret=${STRIPE_SECRET}
