push func FileUpload with Cloudinary

--- a/BE/src/main/resources/application.properties
+++ b/BE/src/main/resources/application.properties
@@ -40,3 +40,8 @@ spring.security.oauth2.client.provider.google.user-info-uri=https://www.googleap
 
 #Payment Gateway
 stripe.secret=${STRIPE_SECRET}
+
+# Cloudinary config
+cloudinary.cloud_name=${FILE_ZONE}
+cloudinary.api_key=${FILE_UPLOAD_API_KEY}
+cloudinary.api_secret=${FILE_UPLOAD_API_SECRET}
