--- a/BE/pom.xml
+++ b/BE/pom.xml
@@ -105,6 +105,11 @@
             <artifactId>stripe-java</artifactId>
             <version>26.5.1</version>
         </dependency>
+        <dependency>
+            <groupId>com.cloudinary</groupId>
+            <artifactId>cloudinary-http44</artifactId>
+            <version>1.39.0</version>
+        </dependency>
     </dependencies>
 
     <build>
